--- a/classes.css
+++ b/classes.css
@@ -21,7 +21,7 @@
     --font-light:90%;
     --font-opacity:0;
     color: var(--font-color);
-    color: var(--primary-color);
+    background-color: var(--primary-color);
 }
   
 .light, .light * {
