tweaked theme values

--- a/main.css
+++ b/main.css
@@ -39,8 +39,15 @@
 html {
     background-color: var(--primary-color);
     color: var(--font-color);
+    height: 100vh;
+    margin:0;
+    box-sizing: border-box;
 }
 
+body {
+    background-color: var(--primary-color);
+    min-height: 100%;
+}
 /* Input styles */
 input {
     background-color: grey;
