--- a/main.css
+++ b/main.css
@@ -46,7 +46,7 @@ html {
 
 body {
     background-color: var(--primary-color);
-    min-height: 100%;
+    min-height: 100vh;
 }
 /* Input styles */
 input {
