adding button reset

--- a/main.css
+++ b/main.css
@@ -44,6 +44,9 @@ html {
     box-sizing: border-box;
 }
 
+button {
+    all:unset;
+}
 body {
     background-color: var(--primary-color);
     min-height: 100vh;
