--- a/main.css
+++ b/main.css
@@ -74,14 +74,15 @@ input {
 
 /* Dialog container styling */
 dialog {
+    top: 50%;
+    left: 50%;
     transition: 5s;
     opacity: 0;
-    background-color: green;
+    background-color: var(--accent-color);
 }
 
 dialog[open] {
     opacity: 1;
-    background-color: red;
     animation: fadeIn .25s normal forwards;   
 }
 
