--- a/main.css
+++ b/main.css
@@ -74,11 +74,13 @@ input {
 
 /* Dialog container styling */
 dialog {
+    position:fixed;
     top: 50%;
     left: 50%;
     transition: 5s;
     opacity: 0;
     background-color: var(--accent-color);
+    color: var(--font-color);
 }
 
 dialog[open] {
