--- a/main.css
+++ b/main.css
@@ -76,7 +76,7 @@ input {
 dialog {
     position:fixed;
     top: 50%;
-    left: 50%;
+    margin:auto;
     transition: 5s;
     opacity: 0;
     background-color: var(--accent-color);
