moved var to :root

--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 @import url(text.css);
 
 /* Site-wide colors and styles */
-*{
+:root{
     font-family: 'Segou UI', 'Calibri', Arial, 'Helvetica Neue', 'Times New Roman';
     --switch-height: 17px;
     --switch-width: 34px;  
@@ -51,7 +51,7 @@ html {
 button {
     all:unset;
     outline: revert;
-    
+
 }
 body {
     background-color: var(--primary-color);
