--- a/classes.css
+++ b/classes.css
@@ -20,6 +20,32 @@
     --font-sat:0%;
     --font-light:90%;
     --font-opacity:0;    
+
+
+    --primary-color: hsla(
+        calc(var(--hue) + var(--BG-hue)), 
+        calc(var(--sat) + var(--BG-sat)),
+        calc(var(--light) + var(--BG-light)),
+        calc(var(--opacity) + var(--BG-opacity)));
+
+    --accent-color: hsla(
+        calc(var(--hue) + var(--accent-hue)), 
+        calc(var(--sat) + var(--accent-sat)),
+        calc(var(--light) + var(--accent-light)),
+        calc(var(--opacity) + var(--accent-opacity)));
+
+    --font-color:hsla(
+        calc(var(--hue) + var(--font-hue)), 
+        calc(var(--sat) + var(--font-sat)),
+        calc(var(--light) + var(--font-light)),
+        calc(var(--opacity) + var(--font-opacity)));
+
+    --contrast-color: hsla(
+        calc(var(--hue) + var(--contrast-hue)), 
+        calc(var(--sat) + var(--contrast-sat)),
+        calc(var(--light) + var(--contrast-light)),
+        calc(var(--opacity) + var(--contrast-opacity)));
+
 }
   
 .light, .light * {
@@ -44,6 +70,31 @@
     --font-sat:0%;
     --font-light:-100%;
     --font-opacity:0;
+
+    
+    --primary-color: hsla(
+        calc(var(--hue) + var(--BG-hue)), 
+        calc(var(--sat) + var(--BG-sat)),
+        calc(var(--light) + var(--BG-light)),
+        calc(var(--opacity) + var(--BG-opacity)));
+
+    --accent-color: hsla(
+        calc(var(--hue) + var(--accent-hue)), 
+        calc(var(--sat) + var(--accent-sat)),
+        calc(var(--light) + var(--accent-light)),
+        calc(var(--opacity) + var(--accent-opacity)));
+
+    --font-color:hsla(
+        calc(var(--hue) + var(--font-hue)), 
+        calc(var(--sat) + var(--font-sat)),
+        calc(var(--light) + var(--font-light)),
+        calc(var(--opacity) + var(--font-opacity)));
+
+    --contrast-color: hsla(
+        calc(var(--hue) + var(--contrast-hue)), 
+        calc(var(--sat) + var(--contrast-sat)),
+        calc(var(--light) + var(--contrast-light)),
+        calc(var(--opacity) + var(--contrast-opacity)));
 }
 
 .primary {
