--- a/main.css
+++ b/main.css
@@ -40,8 +40,8 @@
 }
 
 html {
-    background-color: var(--primary-color);
-    color: var(--font-color);
+    /* background-color: var(--primary-color);
+    color: var(--font-color); */
     height: 100vh;
     margin:0;
     box-sizing: border-box;
@@ -53,7 +53,7 @@ button {
 
 }
 body {
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
     min-height: 100vh;
     display: flex;
     flex-direction: column;
